--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install WordPress on LEMP Stack
+- name: Install and Configure WordPress on LEMP Stack
   hosts: wordpress
   become: true
   vars:
@@ -19,15 +19,24 @@
           - nginx
           - php-fpm
           - php-mysqlnd
+          - php-json
+          - php-xml
+          - php-gd
+          - php-mbstring
+          - php-curl
           - unzip
           - wget
         state: present
 
-    - name: Start and enable Nginx
+    - name: Start and enable Nginx & PHP-FPM
       service:
-        name: nginx
+        name: "{{ item }}"
         state: started
         enabled: yes
+      loop:
+        - nginx
+        - php-fpm
+
     - name: Remove default index.html
       file:
         path: /usr/share/nginx/html/index.html
@@ -40,7 +49,7 @@
           server {
               listen 80;
               server_name _;
-              root /var/www/html/wordpress;
+              root /var/www/html/;
               index index.php index.html index.htm;
 
               location / {
@@ -54,11 +63,26 @@
                   fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
               }
 
-              location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot)$ {
+              # Fix for static files
+              location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot|mp4|webm)$ {
+                  root /var/www/html/;
+                  access_log off;
                   expires max;
                   log_not_found off;
               }
+
+              location = /favicon.ico {
+                  log_not_found off;
+                  access_log off;
+              }
+
+              location = /robots.txt {
+                  allow all;
+                  log_not_found off;
+                  access_log off;
+              }
           }
+      notify: Restart Nginx
 
     - name: Download WordPress
       get_url:
@@ -73,8 +97,7 @@
         extra_opts:
           - --strip-components=1
 
-
-    - name: Set ownership for WordPress files
+    - name: Set correct permissions for WordPress files
       file:
         path: /var/www/html/
         owner: nginx
@@ -82,14 +105,25 @@
         mode: "0755"
         recurse: yes
 
+    - name: Set correct permissions for uploads directory
+      file:
+        path: /var/www/html/wp-content/uploads
+        state: directory
+        owner: nginx
+        group: nginx
+        mode: "0775"
+        recurse: yes
+
     - name: Configure wp-config.php
       template:
         src: templates/wp-config.php.j2
-        dest: /var/www/html/wordpress/wp-config.php
+        dest: /var/www/html/wp-config.php
         owner: nginx
         group: nginx
         mode: "0644"
+      notify: Restart Nginx
 
+  handlers:
     - name: Restart Nginx
       service:
         name: nginx
