changed wordpress file ownership

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -100,6 +100,14 @@
         remote_src: yes
         extra_opts:
           - --strip-components=1
+
+    - name: Set ownership for WordPress files
+      file:
+        path: /var/www/html
+        owner: nginx
+        group: nginx
+        recurse: yes
+
     - name: Ensure wp-content directory exists
       file:
         path: /var/www/html/wp-content
@@ -115,16 +123,6 @@
         owner: nginx
         group: nginx
         mode: "0775"
-
-    - name: Ensure correct ownership for WordPress files
-      file:
-        path: /var/www/html/
-        state: directory
-        owner: nginx
-        group: nginx
-        mode: "0775"
-        recurse: yes
-
 
     - name: Configure wp-config.php
       template:
