changed ansible mouting command

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -127,7 +127,7 @@
     - name: Mount EFS to /var/www/html/wp-content
       lineinfile:
         path: /etc/fstab
-        line: "{{ efs_id }}:/ /var/www/html/wp-content efs _netdev,noresvport,uid=nginx,gid=nginx 0 0 0 0"
+        line: "{{ efs_id }}:/ /var/www/html/wp-content nfs4 nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,_netdev 0 0"
         state: present
 
     - name: Ensure EFS is mounted
