Change mount command from using dns id to dns name

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -38,6 +38,7 @@
       loop:
         - nginx
         - php-fpm
+        - nfs-utils
 
     - name: Update PHP-FPM user and group
       lineinfile:
@@ -127,7 +128,7 @@
     - name: Mount EFS to /var/www/html/wp-content
       lineinfile:
         path: /etc/fstab
-        line: "{{ efs_id }}:/ /var/www/html/wp-content nfs4 nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,_netdev 0 0"
+        line: "{{ efs_dns_name }}:/ /var/www/html/wp-content nfs4 nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,_netdev 0 0"
         state: present
 
     - name: Ensure EFS is mounted
