--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -103,40 +103,45 @@
               }
           }
       notify: Restart Nginx
-    - name: Check if wp-content is empty
-      stat:
-        path: /var/www/html/wp-content
-      register: wp_content_stat
 
-    - name: Populate wp-content from local WordPress package
-      copy:
-        src: /var/www/html/wp-content/
-        dest: /var/www/html/wp-content/
+    - name: Download WordPress tarball
+      get_url:
+        url: https://wordpress.org/latest.tar.gz
+        dest: /tmp/wordpress.tar.gz
+
+    - name: Extract WordPress to temporary directory
+      unarchive:
+        src: /tmp/wordpress.tar.gz
+        dest: /tmp/
         remote_src: yes
-      when: wp_content_stat.stat.isdir is not defined or wp_content_stat.stat.size == 0
+        extra_opts:
+          - --strip-components=1
 
-    - name: Mount EFS to /var/www/html/wp-content
+    - name: Copy non-wp-content files to /var/www/html
+      command: >
+        rsync -a --exclude=wp-content/ /tmp/wordpress/ /var/www/html/
+
+    - name: Ensure local wp-content directory exists (pre-mount)
+      file:
+        path: /var/www/html/wp-content
+        state: directory
+        owner: nginx
+        group: nginx
+        mode: '0755'
+
+    - name: Add EFS mount entry to fstab for wp-content
       lineinfile:
         path: /etc/fstab
         line: "{{ efs_dns_name }}:/ /var/www/html/wp-content nfs4 nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2,_netdev 0 0"
         state: present
 
-    - name: Ensure EFS is mounted
+    - name: Ensure EFS is mounted to wp-content
       command: mount -a
       changed_when: false
 
-    - name: Download WordPress
-      get_url:
-        url: https://wordpress.org/latest.tar.gz
-        dest: /tmp/wordpress.tar.gz
-
-    - name: Extract WordPress
-      unarchive:
-        src: /tmp/wordpress.tar.gz
-        dest: /var/www/html/
-        remote_src: yes
-        extra_opts:
-          - --strip-components=1
+    - name: Populate wp-content on EFS with WordPress files
+      command: >
+        rsync -a /tmp/wordpress/wp-content/ /var/www/html/wp-content/
 
     - name: Configure wp-config.php
       template:
