--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,7 +7,7 @@
     wp_db_user: "{{ db_user }}"
     wp_db_password: "{{ db_pass }}"
     wp_db_host: "{{ db_host }}"
-    efs_id: "{{ efs_id }}"
+    efs_dns_name: "{{ efs_dns_name }}"
 
   tasks:
     - name: Update yum cache
@@ -110,10 +110,16 @@
         url: https://wordpress.org/latest.tar.gz
         dest: /tmp/wordpress.tar.gz
 
+    - name: Ensure temporary extraction directory exists
+      file:
+        path: /tmp/wordpress
+        state: directory
+        mode: '0755'
+
     - name: Extract WordPress to temporary directory
       unarchive:
         src: /tmp/wordpress.tar.gz
-        dest: /tmp/
+        dest: /tmp/wordpress
         remote_src: yes
         extra_opts:
           - --strip-components=1
